# compresscore

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
compresscore/: __init__.py  __main__.py  cli.py  compress.py  encoder.py  ffmpeg.py  output.py  size.py
