[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compresscore"
version = "0.1.0"
description = "Size-targeted video compressor using FFmpeg with VideoToolbox hardware acceleration."
requires-python = ">=3.9"
dependencies = []
readme = "README.md"
license = {text = "MIT"}
keywords = ["video", "compression", "ffmpeg", "videotoolbox", "discord"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Conversion",
]

[project.scripts]
compresscore = "compresscore.cli:main"
cpc = "compresscore.cli:main"

[project.urls]
Homepage = "https://github.com/ishsharm0/compresscore"
Repository = "https://github.com/ishsharm0/compresscore"
